# 2024-CPP-task1-Calculator

./: .gitignore  CMakeLists.txt  calculator.aps  calculator.rc
plugins/Factorial/: CMakeLists.txt  library.cpp  library.h
plugins/Log/: CMakeLists.txt  library.cpp  library.h
plugins/Pow/: CMakeLists.txt  library.cpp  library.h
plugins/Sin/: CMakeLists.txt  library.cpp  library.h
src/: Token.h  main.cpp
src/Calculator/: Calculator.cpp  Calculator.h  OperationLibrary.h  Plugin.h
src/Operation/: Operation.h
src/Operation/ArityOperation/: BinaryOperation.h  UnaryOperation.h
src/Operation/OperationType/: OperaitionType.h  OperationType.h
src/Operations/Operation/: Operation.h
src/Parser/: Parser.cpp  Parser.h  Token.h
src/Tech/: tech.cpp  tech.h
